--- a/app/views/static_pages/landing_page.html.haml
+++ b/app/views/static_pages/landing_page.html.haml
@@ -1,3 +1,8 @@
 %h1
   Hello world
 = link_to "Privacy policy", privacy_policy_path
+
+
+= link_to courses_path, class: 'btn btn-success' do
+  .fa.fa-book
+  Courses
